# swiftcomp

./: .gitignore  CONTRIBUTING.md  LL-grammar.md  LL-grammar.txt  Makefile  README.md  ast_tree.c  ast_tree.h  codegen.c  codegen.h  error.c  error.h  expressions.c  expressions.h  lexer.c  lexer.h  parser.c  parser.h  rozdeleni  semantic  semantic.c  semantic.h  sym_table_stack.c  sym_table_stack.h  symbol_table.c  symbol_table.h  symtableexample.c
docs/: LL-grammar.md
examples/: README  double.out  double.swift  dsfa  example1.out  example1.swift  example2.out  example2.swift  example3.out  example3.swift  examples.sh  hello.out  hello.swift  ifj23.swift  run.sh  visibility.out  visibility.swift
include/: codegen.h  error.h  lexer.h  symbol_table.h
lexer-test/: .input.txt.swo  .input.txt.swp  input.txt  test  test.c
src/: symbol_table.c
test/codegen/: ifcondok.swift
test/exoressiontests/: test.py
test/expressiontests/: test.py
test/parsertests/: test.py
tests/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  semantic  semantic_test1.swift  semtest2.swift  test_exit.cpp  test_main.cpp  test_semantic
tests/googletest-build/: CTestTestfile.cmake  Makefile  cmake_install.cmake
tests/googletest-build/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
tests/googletest-build/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
